# PTA

./: .gitignore
scripts/: activate_hospital_nav2.sh  activate_nav2.sh
src/pta_robot_sim/: CMakeLists.txt  package.xml
src/pta_robot_sim/behavior_trees/: navigate_to_pose_combo3.xml  navigate_to_pose_combo4.xml
src/pta_robot_sim/config/: diff_drive_controller.yaml  diff_drive_controller_skid_steer_diff_mode.yaml  ekf.yaml  ekf_holonomic.yaml  ekf_skid_steer.yaml  mecanum_drive_controller.yaml  ros2_controllers.yaml  slam_toolbox.yaml
src/pta_robot_sim/config/nav2/: combo1_dwb_navfn_diffdrive.yaml  combo2_dwb_navfn_holonomic.yaml  combo3_mppi_navfn.yaml  combo4_mppi_smac2d.yaml
src/pta_robot_sim/launch/: hospital_mapping.launch.py  hospital_nav2.launch.py  nav2.launch.py  nav2_combo1_diffdrive.launch.py  nav2_combo3_mppi_navfn.launch.py  odom_test_logger.py  sim_controller_only.launch.py  sim_diff_drive.launch.py  sim_full.launch.py  view_robot.launch.py
src/pta_robot_sim/maps/: test_room.pgm  test_room.yaml  test_room_graph.data
src/pta_robot_sim/meshes/: A2_Link.STL  A3_Link.STL  D455_Link.STL  T265_Link.STL  base_link.STL
src/pta_robot_sim/rviz/: pta_robot.rviz
src/pta_robot_sim/scripts/: safety_obstacle_cloud_node
src/pta_robot_sim/src/: mecanum_drive_node.py
src/pta_robot_sim/urdf/: pta_robot.urdf  pta_robot_diff_drive.urdf  pta_robot_mecanum_drive.urdf  pta_robot_planar.urdf  pta_robot_skid_steer_diff_mode.urdf
src/pta_robot_sim/worlds/: test_room.world
